# cppexperiments

./: .gitignore  .travis.yml  helloworld.sln
helloworld/: helloworld.vcxproj  main.cpp
tddwithgtest/: CMakeLists.txt  ReadMe.md
tddwithgtest/app/: CMakeLists.txt
tddwithgtest/tests/: CMakeLists.txt
tddwithgtest/tests/src/: main.cpp
tddwithgtest/toolset/: CMakeLists.txt
tddwithgtest/toolset/include/: MyParser.h
tddwithgtest/toolset/src/: MyParser.cpp
test/: helloworld.sln
test/engine/: engine.cpp  engine.h  engine.vcxproj
test/helloworld/: main.cpp
test/wengine/: cpp.hint  stdafx.h  wengine.cpp  wengine.h  wengine.vcxproj  wengine.vcxproj.filters
test/whelloworld/: main.cpp  stdafx.h  whelloworld.vcxproj  whelloworld.vcxproj.filters
